# personal-finance

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
notes/: aib.md  revolut.md
src/personal_finance/: __init__.py
src/personal_finance/loaders/: __init__.py  aib.py  normalize.py  revolut.py
