[project]
name = "personal-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rian-dolphin", email = "rdolphin98@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.42.0",
]

[project.scripts]
personal-finance = "personal_finance:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
