[project]
name = "personal-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rian-dolphin", email = "rdolphin98@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "plotly>=6.8.0",
    "polars>=1.42.0",
]

[project.scripts]
personal-finance = "personal_finance:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
exclude = ["**/*.ipynb"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]
